[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/ui/how_to_play/HowToPlay.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
extra_spacing_char = 3
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/font/RussoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 36
extra_spacing_char = 3
font_data = SubResource( 5 )

[node name="HowToPlay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 551.0
custom_constants/margin_right = 200
custom_constants/margin_top = 150
custom_constants/margin_left = 200

[node name="RichText" type="RichTextLabel" parent="Margin"]
margin_left = 200.0
margin_top = 150.0
margin_right = 774.0
margin_bottom = 526.0
custom_fonts/normal_font = SubResource( 4 )
text = "You are a Pilot on a Spaceship. You encounter a Meteorite-Field and need to manouver safely 
through it.

Steer your Spaceship using 'WASD' or the Arrow-Keys. Shoot Bullets using 'Spacebar'. 
Every 10sec you get Ammo. You can buy Items or Upgrades in the Shop with the Score you earn after every run. The longer you survive the more Score you get! Try to be the best Pilot and compete for the Highscore!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 551.0
custom_constants/separation = 42

[node name="Button" type="Button" parent="VBox"]
margin_left = 914.0
margin_right = 974.0
margin_bottom = 26.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 4 )
text = "back"
flat = true

[node name="VBox" type="VBoxContainer" parent="VBox"]
margin_top = 68.0
margin_right = 974.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="VBox/VBox"]
margin_right = 974.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
text = "How to play"
align = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="visibility_changed" from="." to="." method="_on_HowToPlay_visibility_changed"]
[connection signal="pressed" from="VBox/Button" to="." method="_on_Button_pressed"]
